# webscraper

./: README.md  pyproject.toml  valto-haku.sh  valto-lataus.sh
tests/: test_Downloader.py  test_Records.py
webscraper/: oai-harvester.py  oai_harvester.py
webscraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
