[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "webscraper"
authors = [
	{name = "Max Strandén", email = "max.stranden@gmail.com"},
]
description = "Collect data from web-services"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
	"requests",
	"sickle",
]

[project.scripts]
oai-harvest = "webscraper.oai_harvester:main"

[project.urls]
Homepage = "https://github.com/StranMax/webscraper"
Documentation = "https://github.com/StranMax/webscraper"